make background gray

--- a/public/app/views/festivalList/festivalList.html
+++ b/public/app/views/festivalList/festivalList.html
@@ -11,17 +11,10 @@
 
     <!-- TILES CONTAINER -->
     <div id="info-container" ng-show="eventsLoaded">
-        <div class="gridListdemoDynamicTiles">
-            <md-content layout="row">
-                <md-content flex="100" layout="column" md-scroll-y layout-padding>
-                
-                <md-list>
-                    <festival-tile event="event" selected="tileSelected(tileID)" collapse="event.collapse" ng-repeat="event in eventList | filter: displayEvent"> </festival-tile>
-                </md-list>    
-                
-                </md-content>
-            </md-content>
-        </div>				
+        <md-content flex="100" layout="column" md-scroll-y layout-padding class="gridListdemoDynamicTiles" style="background-color: #ECF0F1;">   
+            <md-list>
+                <festival-tile event="event" selected="tileSelected(tileID)" collapse="event.collapse" ng-repeat="event in eventList | filter: displayEvent"> </festival-tile>
+            </md-list>   
+        </md-content>
     </div>		
-
 </div>	
