--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -45,7 +45,7 @@
                 </md-card-title-text>
 
             </div>
-            <div>
+            <div style="width:36%;margin-right: -6px;">
                 <md-button class="md-icon-button" aria-label="Favorite">
                     <md-icon md-svg-icon="images/heart_black.svg"></md-icon>
                 </md-button>
@@ -62,7 +62,7 @@
 
 
     <!-- Each artist is  a tile in the tileRow -->
-    <md-grid-tile ng-repeat="artist in event.artists | limitTo:8" md-rowspan="{{artist.tileInfo.displaySpan.rows}}" md-colspan="{{artist.tileInfo.displaySpan.cols}}"
+    <!--<md-grid-tile ng-repeat="artist in event.artists | limitTo:8" md-rowspan="{{artist.tileInfo.displaySpan.rows}}" md-colspan="{{artist.tileInfo.displaySpan.cols}}"
     md-colspan-sm="1" ng-click="selectArtistTile(event.tileInfo, artist.tileInfo)" class="artistTile">
         <div style="width: 100%; height: 100%;background-size: cover;
 " ng-style="{'background-image' :'url({{artist.image}})', 'border' : artist.tileInfo.border}">
@@ -70,5 +70,5 @@
         <md-grid-tile-footer>
             <h3>{{artist.name}}</h3>
         </md-grid-tile-footer>
-    </md-grid-tile>
+    </md-grid-tile>-->
 </md-grid-list>
