--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/gridStyles.css">
         <link rel="stylesheet" type="text/css" href="css/signup.css">
         <link rel="stylesheet" type="text/css" href="css/header.css">
+         <link rel="stylesheet" type="text/css" href="css/festivalCard.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
 
