add scroll to selected festival

--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -35,7 +35,7 @@
 
     </md-grid-tile>-->
 
-    <md-card class="festival-card">
+    <md-card class="festival-card" style="margin-top:{{topMargin}}px; margin-bottom:{{bottomMargin}}px">
         <div class="festival-card-image md-card-image" style="background-image: url('{{event.largeimageurl}}'); height: {{displayHeight}}px" ng-click="selectEventTile(event.tileInfo)">
         </div>
         <md-card-actions layout="row" layout-align="end center">
