expanding details template :)

--- a/public/app/views/festivalList/festivalList.html
+++ b/public/app/views/festivalList/festivalList.html
@@ -11,10 +11,10 @@
 
     <!-- TILES CONTAINER -->
     <div id="info-container" ng-show="eventsLoaded">
-        <md-content id="festial-card-list-container" flex="50" layout="column" md-scroll-y layout-padding class="gridListdemoDynamicTiles" style="background-color: #F9F9F9;">   
-            <md-list>
+        <!--<md-content  flex="80" layout="column" md-scroll-y layout-padding class="gridListdemoDynamicTiles" style="background-color: #F9F9F9;">   -->
+            <md-list id="festial-card-list-container">
                 <festival-tile event="event" selected="tileSelected(tileID)" collapse="event.collapse" ng-repeat="event in eventList | filter: displayEvent"> </festival-tile>
             </md-list>   
-        </md-content>
+        <!--</md-content>-->
     </div>		
 </div>	
