--- a/public/css/header.css
+++ b/public/css/header.css
@@ -16,8 +16,12 @@
     box-shadow: none;
 }
 
-::-webkit-input-placeholder { /* Only works on WebKit, Blink, Edge */
-    color:    white;
+input::-webkit-input-placeholder { /* Only works on WebKit, Blink, Edge */
+    color: rgba(255,255,255,0.6);
+}
+
+input:focus::-webkit-input-placeholder { /* Only works on WebKit, Blink, Edge */
+    color: rgba(255,255,255,0.4);
 }
 
 #search-autocomplete{
