--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -1,6 +1,6 @@
 <!-- Each festival event is contained in a tileRow -->
 <div class="festival-container" style="margin-top:{{topMargin}}px; margin-bottom:{{bottomMargin}}px; transition: all 0.5s">
-    <div class="festival-card-container" style="width:50%;">
+    <div class="festival-card-container" style="transition: all 0.5s; width: 40%;height:{{displayHeight}}px">
         <md-card class="festival-card" >
             <div class="festival-card-image md-card-image" style="background-image: url('{{event.largeimageurl}}');" ng-click="selectEventTile(event.tileInfo)">
             </div>
@@ -19,8 +19,8 @@
         </md-card>
     </div>
     
-    <div class="festival-details-container animate-show" ng-show="isExpanded">
-        <div class="festival-card" md-whiteframe="6" style="background-color: #446CB3; height: 100%; margin:10px;box-shadow: 2px 2px 4px #AAAAAA;">
+    <div class="festival-details-container animate-show" ng-show="isExpanded" style="transition: all 0.5s">
+        <div class="festival-card" md-whiteframe="6" style="background-color: #446CB3; height: 100%; margin:10px;box-shadow: 2px 2px 4px #AAAAAA;transition: all 0.5s;">
             TEST         
         </div>
     </div>
