--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -1,7 +1,7 @@
 <!-- Each festival event is contained in a tileRow -->
 <div class="festival-container" style="margin-top:{{topMargin}}px; margin-bottom:{{bottomMargin}}px; transition: all 0.5s">
-    <div class="festival-card-container" style="transition: all 0.5s; width: 40%;height:{{displayHeight}}px">
-        <md-card class="festival-card" >
+    <div class="festival-card-container" style="transition: all 0.5s; width: 40%;height:{{displayHeight}}px;">
+        <md-card class="festival-card">
             <div class="festival-card-image md-card-image" style="background-image: url('{{event.largeimageurl}}');" ng-click="selectEventTile(event.tileInfo)">
             </div>
             <md-card-actions layout="row" layout-align="end center">
@@ -17,18 +17,35 @@
                 </div>
             </md-card-actions>
             <div class="festival-card-details" ng-show="isExpanded">
-                <p> {{event.description}}</p>  
-                <p>{{event.venue.name}}</p>             
+                <p> {{event.description}}</p>
+                <p>{{event.venue.name}}</p>
                 <p>{{event.venue.address}}</p>
                 <p>{{event.date}}</p>
-                <p>{{event.entryprice}}</p>                              
+                <p>{{event.entryprice}}</p>
             </div>
         </md-card>
     </div>
-    
+
     <div class="festival-details-container animate-show" ng-show="isExpanded" style="transition: all 0.5s">
-        <div class="festival-card" md-whiteframe="6" style="background-color: #446CB3; height: 100%; margin:10px;box-shadow: 2px 2px 4px #AAAAAA;transition: all 0.5s;">
-            TEST         
+        <div class="festival-card" md-whiteframe="6" style="background-color: #446CB3 margin:10px; height:550px; box-shadow: 2px 2px 4px #AAAAAA;transition: all 0.5s;" ng-show="isExpanded">
+            <md-toolbar class="md-warn">
+                <div class="md-toolbar-tools">
+                <h2 class="md-flex">Event Toolbar</h2>
+                </div>
+            </md-toolbar>
+            <md-content flex layout-padding style="height: 486px;">
+                <md-list>
+                    <md-subheader class="md-sticky">Artists ({{event.artists.length}})</md-subheader>
+                    <md-list-item class="md-2-line" ng-repeat="artist in event.artists | limitTo:10">
+                        <img ng-src="{{artist.image}}?20" class="md-avatar" />
+                        <div class="md-list-item-text">
+                        <h3>{{ artist.name }}</h3>
+                        <p>Secondary text</p>
+                        </div>
+                    </md-list-item>
+                    <p ng-show="event.artists.length === 0">No artist data available, sorry!</p>
+                </md-list>
+            <md-content>
         </div>
     </div>
 </div>
