--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -17,35 +17,44 @@
                 </div>
             </md-card-actions>
             <div class="festival-card-details" ng-show="isExpanded">
-                <p> {{event.description}}</p>
-                <p>{{event.venue.name}}</p>
-                <p>{{event.venue.address}}</p>
-                <p>{{event.date}}</p>
-                <p>{{event.entryprice}}</p>
+                <p style="width:100%"> {{event.description}}</p>
+                <div class="info-line">
+                    <md-icon class="icon" md-svg-src="images/place_gray.svg" aria-label="android "></md-icon>
+                    <p class="text">{{event.venue.name}}, {{event.venue.address}}</p>
+                </div>
+                <div class="info-line">
+                    <md-icon class="icon" md-svg-src="images/event_gray.svg" aria-label="android "></md-icon>
+                    <p class="text">{{event.date}}</p>
+                </div>
+                <div class="info-line">
+                    <md-icon class="icon" md-svg-src="images/event_gray.svg" aria-label="android "></md-icon>
+                    <p class="text">{{event.entryprice}}</p>
+                </div>
             </div>
         </md-card>
     </div>
 
     <div class="festival-details-container animate-show" ng-show="isExpanded" style="transition: all 0.5s">
-        <div class="festival-card" md-whiteframe="6" style="background-color: #446CB3 margin:10px; height:550px; box-shadow: 2px 2px 4px #AAAAAA;transition: all 0.5s;" ng-show="isExpanded">
+        <div class="festival-card" md-whiteframe="6" style="background-color: #446CB3 margin:10px; height:550px; box-shadow: 2px 2px 4px #AAAAAA;transition: all 0.5s;"
+        ng-show="isExpanded">
             <md-toolbar class="md-warn">
                 <div class="md-toolbar-tools">
-                <h2 class="md-flex">Event Toolbar</h2>
+                    <h2 class="md-flex">Event Toolbar</h2>
                 </div>
             </md-toolbar>
             <md-content flex layout-padding style="height: 486px;">
                 <md-list>
-                    <md-subheader class="md-sticky">Artists ({{event.artists.length}})</md-subheader>
+                    <md-subheader class="md-sticky">Appearing Artists ({{event.artists.length}})</md-subheader>
                     <md-list-item class="md-2-line" ng-repeat="artist in event.artists | limitTo:10">
                         <img ng-src="{{artist.image}}?20" class="md-avatar" />
                         <div class="md-list-item-text">
-                        <h3>{{ artist.name }}</h3>
-                        <p>Secondary text</p>
+                            <h3>{{ artist.name }}</h3>
+                            <p>Secondary text</p>
                         </div>
                     </md-list-item>
                     <p ng-show="event.artists.length === 0">No artist data available, sorry!</p>
                 </md-list>
-            <md-content>
+                <md-content>
         </div>
     </div>
 </div>
