trim event names to fit on cards

--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -5,9 +5,9 @@
             <div class="festival-card-image md-card-image" style="background-image: url('{{event.largeimageurl}}');" ng-click="selectEventTile(event.tileInfo)">
             </div>
             <md-card-actions layout="row" layout-align="end center">
-                <div>
+                <div style="width=80%">
                     <md-card-title-text>
-                        <span class="md-headline">{{event.eventname}}</span>
+                        <span class="md-headline">{{displayEventName}}</span>
                     </md-card-title-text>
                 </div>
                 <div>
