--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -15,11 +15,8 @@ md-input-container{
         padding: 2px 2px 10px;
 }
 
-h3 {
+#signup-dialog-container h3 {
     font-size: x-large;
-    /*text-align: left;*/
-}
-p {
     /*text-align: left;*/
 }
 
