show number of spotify artists in event

--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -11,6 +11,7 @@
                     </md-card-title-text>
                 </div>
                 <div>
+                    {{spotifyArtists.length}}
                     <md-button class="md-icon-button" aria-label="Favorite">
                         <md-icon md-svg-icon="images/heart_gray.svg"></md-icon>
                     </md-button>
