rename spotify endpoints to fit /spotify/*

--- a/public/app/views/header/header.html
+++ b/public/app/views/header/header.html
@@ -1,21 +1,13 @@
-<div id="top-header" ng-controller="HeaderCtrl">  
+<div id="top-header" ng-controller="HeaderCtrl">
     <div id="header-text-container">
-    <h1>Festerr</h1>               
+        <h1>Festerr</h1>
     </div>
-    
+
     <div id="header-search-box-container">
-        <md-chips
-            ng-model="selectedChips"
-            md-autocomplete-snap=""
-            md-require-match="true">
-            <md-autocomplete id="search-autocomplete"
-                md-selected-item="selectedChip"
-                md-search-text="searchText"
-                md-items="item in asyncChipSearch(searchText)"
-                md-item-text="item.name"
-                placeholder="Search for a festival, artist or event">
-                <span
-                    md-highlight-text="searchText">
+        <md-chips ng-model="selectedChips" md-autocomplete-snap="" md-require-match="true">
+            <md-autocomplete id="search-autocomplete" md-selected-item="selectedChip" md-search-text="searchText" md-items="item in asyncChipSearch(searchText)"
+            md-item-text="item.name" placeholder="Search for a festival, artist or event">
+                <span md-highlight-text="searchText">
                     {{item.name}}
                 </span>
             </md-autocomplete>
@@ -26,25 +18,25 @@
                 </span>
             </md-chip-template>
         </md-chips>
-    </div> 
-    
+    </div>
+
     <div id="header-user-login-container" ng-hide="spotifyCodeExists">
         <md-button class="md-raised" ng-click="showSignupDialog($event)">Register</md-button>
-    </div>  
+    </div>
     <div id="header-spotify-authed-container" ng-show="spotifyCodeExists">
         {{spotifyUserInfo.short_name}}
-        <div id="header-spotify-user-profile" style="background-image:url({{spotifyUserInfo.images[0].url}})">            
+        <div id="header-spotify-user-profile" style="background-image:url({{spotifyUserInfo.images[0].url}})">
         </div>
-    </div>  
-    
+    </div>
+
     <div id="header-tabs-container">
         <md-tabs md-dynamic-height md-border-bottom>
-        <md-tab label="What's Hot">
-        </md-tab>
-        <md-tab label="Upcoming">                    
-        </md-tab>
-        <md-tab label="Favourites">                    
-        </md-tab>
+            <md-tab label="What's Hot">
+            </md-tab>
+            <md-tab label="Upcoming">
+            </md-tab>
+            <md-tab label="Favourites">
+            </md-tab>
         </md-tabs>
     </div>
 </div>
