--- a/public/app/views/header/signupDialog.html
+++ b/public/app/views/header/signupDialog.html
@@ -7,7 +7,7 @@
             <p>
                 Festerr uses your Spotify library to show events that matter to you. Festivals featuring more artists in your library appear higher than those with less. Click login with Spotify below to get started!
             </p>
-            <a href="/spotifyLogin">
+            <a href="/spotify/login">
                 <div id="signup-dialog-spotify-container">
                     <img src="images/log_in-desktop-large.png" id="signin-spotify">
                 </div>
