--- a/public/css/festivalCard.css
+++ b/public/css/festivalCard.css
@@ -21,6 +21,14 @@
     height: 100%;
 }
 
+.festival-card-image{
+    display: flex;
+    flex-flow: row;
+    align-content: space-between;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
 .festival-card.festival-details{
     /*height: 100%;*/
     background-color: #446CB3;
@@ -34,6 +42,16 @@
     /*transition: all 2s;*/
 }
 
+.festival-card-image-text {
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    align-items: center;
+    color:white;
+    font-size: larger;
+}
+
 .festival-card-details {
     padding: 20px;
 }
@@ -45,7 +63,8 @@
 }
 
 .md-headline {
-    font-size: medium;
+    font-size: larger;
+    /*color: white;*/
 }
 
 md-card-title {
