--- a/public/templates/eventTile.html
+++ b/public/templates/eventTile.html
@@ -44,7 +44,7 @@
             </md-toolbar>
             <md-content flex layout-padding style="height: 486px;">
                 <md-list>
-                    <md-subheader class="md-sticky">Your Artists ({{event.spotifyArtists.length}})</md-subheader>
+                    <md-subheader class="md-no-sticky">Your Artists ({{event.spotifyArtists.length}})</md-subheader>
                     <md-list-item class="md-2-line" ng-repeat="artist in event.spotifyArtists | limitTo:20">
                         <img ng-src="{{artist.image}}?20" class="md-avatar" />
                         <div class="md-list-item-text">
@@ -52,7 +52,7 @@
                             <p>Secondary text</p>
                         </div>
                     </md-list-item>
-                    <md-subheader class="md-sticky">Other Artists ({{event.artists.length}})</md-subheader>
+                    <md-subheader class="md-no-sticky">Other Artists ({{event.artists.length}})</md-subheader>
                     <md-list-item class="md-2-line" ng-repeat="artist in event.artists | limitTo:20">
                         <img ng-src="{{artist.image}}?20" class="md-avatar" />
                         <div class="md-list-item-text">
