--- a/views/index.html
+++ b/views/index.html
@@ -25,14 +25,8 @@
 
 	<body ng-app="festerrApp">
         
-    <div id="main-container" ng-controller="FestivalListCtrl">
-
-        <!-- header -->
-        <ng-include src="'/app/views/header/header.html'"></ng-include>
-        <!-- Main festival list -->
-        <ng-include src="'/app/views/festivalList/festivalList.html'"></ng-include>    
-
-    </div>   
+        <ng-view></ng-view>
+    
 	</body>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.5.0/fabric.min.js"></script>
@@ -41,12 +35,14 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.0.0/mustache.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script>
 
 	<script type="text/javascript" src="js/FesterrMap.js"></script>
 	<script type="text/javascript" src="app/app.js"></script>
+    <script type="text/javascript" src="app/views/mainController.js"></script>
 	<script type="text/javascript" src="app/views/festivalList/festivalList.js"></script>
     <script type="text/javascript" src="app/views/header/header.js"></script>
 	<script type="text/javascript" src="app/services/FestivalDataService.js"></script>
