--- a/public/app/views/header/header.html
+++ b/public/app/views/header/header.html
@@ -23,9 +23,9 @@
     <div id="header-user-login-container" ng-hide="spotifyCodeExists">
         <md-button class="md-raised" ng-click="showSignupDialog($event)">Register</md-button>
     </div>
-    <div id="header-spotify-authed-container" ng-show="spotifyCodeExists">
+    <div id="header-spotify-authed-container" ng-show="spotifyDetailsRetrieved">
         {{spotifyUserInfo.short_name}}
-        <div id="header-spotify-user-profile" style="background-image:url({{spotifyUserInfo.images[0].url}})">
+        <div id="header-spotify-user-profile" ng-style="{ 'background-image' : 'url(' + spotifyUserInfo.images[0].url + ')' }">
         </div>
     </div>
 
