--- a/public/css/header.css
+++ b/public/css/header.css
@@ -64,6 +64,11 @@ input:focus::-webkit-input-placeholder { /* Only works on WebKit, Blink, Edge */
     align-items: center; /* align vertical */
 }
 
+#header-spotify-authed-name {
+    margin: 0;
+    margin-right: 10px;
+}
+
 #header-spotify-user-profile {   
     height: 40px;
     width: 40px;
@@ -144,3 +149,12 @@ md-chips.md-default-theme .md-chips{
     justify-content: space-between; /* align horizontal */
     align-items: center; /* align vertical */
 }
+
+@media (max-width:600px) {
+
+    /* Hide the username on small sreens */
+    #header-spotify-authed-name {
+        display: none;
+    }
+}
+
