Add column layout of festival details for small screens

--- a/public/css/festivalCard.css
+++ b/public/css/festivalCard.css
@@ -38,10 +38,6 @@
     /*transition: all 2s;*/
 }
 
-.festival-card-container {
-    /*transition: all 2s;*/
-}
-
 .festival-card-image-text {
     width: 100%;
     display: flex;
@@ -112,4 +108,9 @@ md-card-actions{
 
 .info-line .icon {
     width: 10%;
+}
+
+/* Desktops and laptops ----------- */
+@media only screen  and (min-width : 970px) {
+    .festvial-card
 }
